--- a/style.css
+++ b/style.css
@@ -52,14 +52,9 @@
     transition: opacity 0.3s ease-in 0.4s;
   }
 
-  @media (max-width: 480px){
-    .container{
-        width: 100px;
-    }
-    .panel:nth-of-type(4),
-    .panel:nth-of-type(5){
-        display: none;
+  @media (max-width: 600px) {
+    .panel {
+      flex: 1; /* Adjust the flex value for smaller screens */
+      height: 50vh; /* Adjust the height for smaller screens */
     }
   }
-
-
